css/home.css
* {
  image-rendering: pixelated;
}

body {
  background: url("../graphics/bg.jpg");
  background-repeat: repeat-x;
  background-size: contain;
}

p {
  width: 100%;
  font-size: var(--font-size-text);
  text-align: center;
  margin-top: var(--pmargin);
  font-family: 'Press Start 2P', sans-serif;
  color: var(--text-color-main);
}

@media (max-width: 500px) {
  .portrait {
    width: auto;
    height: 66vh;

    display: block;

    position: fixed;
    bottom: 0;
    left: calc(50% - (33vh * 512 / 493));
  }
}

@media (min-width: 501px) {
  .portrait {
      width: 512px;
      height: 493px;
      display: block;
      position: fixed;
      bottom: 0;
      left: calc(50% - 256px);
      bottom: -50px;
  }
}

